Change thesis title
* A large part of the contribution is the backend implementation and runtime system, which don't constitute optimisation via program transformation, per-se.
* The thesis is really about optimising the *entire* GPU program, including program optimisation and runtime system.
* Something that wasn't our last paper title might be better though...

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,9 +5,11 @@
 \newcommand{\project}{$<<$project$>>$}
 %\newcommand{\doctitle}{Crossing the Streams}
 %\newcommand{\docsubtitle}{Functional Parallel Programming for Graphics Processing Units}
-\newcommand{\doctitle}{Optimising data-parallel programs for SIMD architectures via program transformation}
+%\newcommand{\doctitle}{Optimising data-parallel programs for SIMD architectures via program transformation}
+\newcommand{\doctitle}{Optimising Purely Functional GPU Programs}
 \newcommand{\docsubtitle}{}
-\newcommand{\doccontentsline}{Functional Programming for GPUs}
+%\newcommand{\doccontentsline}{Functional Programming for GPUs}
+\newcommand{\doccontentsline}{\doctitle}
 
 \input{preamble}
 
