--- a/title.tex
+++ b/title.tex
@@ -19,8 +19,8 @@
     \hrule
     \vspace{4ex}
     {\LARGE\bfseries \doctitle\\}
-    \vspace{1ex}
-    {\large\bfseries \docsubtitle}
+%    \vspace{1ex}
+%    {\large\bfseries \docsubtitle}
     \vspace{4ex}
     \hrule height 0.8pt
     \nobreak
